# tomcat-speech

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  extract_sound.py  health_outcomes_lm.R  makefile_cmu  mmc_server.py  mmc_server_requirements.txt  per_call_health_outcomes_lm.R  pyproject.toml  python_readme.md  requirements.txt  requirements_roberta.txt  setup.py  split_transcript.py  test.md
agents/: README.md  docker-compose.linux_server.yml  docker-compose.yml  vanga.yml
ckj-final/: pyvenv.cfg
classifier_R/: .RData  .Rhistory  classifier.R  clean_data_classified.R
data/: test_message.json
data_prep/: acoustic_extraction.py  audio_extraction.py  audio_to_token.py  audio_to_w2v.py  data_prep.py  data_prep_helpers.py  glove_subsetting.py  meld_input_formatting.py  mfcc_ravdess.py  mustard_data_prep.py  organize_prepared_kaldi_files.py  prepare_data.py  roberta_data_prep.py  sentiment_score_prep.py  subset_glove.py
message_specs/: asr_message.json  asr_message.md
mmc_server/: Dockerfile  README.md  __init__.py  docker-compose.yml  environment.yml  mmc_server.py
models/: attn_models.py  baselines.py  bimodal_models.py  chalearn_models.py  input_models.py  input_models_sjp.py  plot_training.py  train_and_test_models.py
models_test/: asist_test.py  glove_test.py  input_manipulation_test.py  meld_test.py  model_test.py  test_meld.py
scripts/: activate_virtualenv  align_text_and_acoustic_data  asr_agent  download_opensmile  get_asist_sentiment_analysis.sh  install  preprocess_training_data.py  sr_mic  (+5 more)
(+288 files in other folders)
